chat z-index fixed

--- a/src/components/cart/cart.sass
+++ b/src/components/cart/cart.sass
@@ -9,7 +9,7 @@
         height: 100%
         width: 100%
         background: rgba(0, 0, 0, 0.5)
-        z-index: 10
+        z-index: 990
 
     &_widget
         position: fixed
@@ -21,7 +21,7 @@
         height: 100%
         border-top-left-radius: 2em
         background: $main-color-white
-        z-index: 11
+        z-index: 999
 
         &_widget-inner
             padding: 0 2em
