--- a/src/components/chat/chat.sass
+++ b/src/components/chat/chat.sass
@@ -12,7 +12,7 @@
     right: 45px
     bottom: 35px
     background: #eefef6c9
-    z-index: 999
+    z-index: 990
     svg.cross-icon
         width: 40%
         height: 40%
